--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "knex": "^0.11.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "redtape": "^1.0.0"
   }
 }
