--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "tape test/**/*.js | tap-spec"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -16,6 +17,8 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "redtape": "^1.0.0"
+    "redtape": "^1.0.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.5.1"
   }
 }
