--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "~3.1.0",
     "knex": "^0.11.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.3"
   }
 }
