--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test":"tape test/**/*.js | tap-spec"
+    "test": "tape test/**/*.js | tap-spec"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "express-hbs": "^1.0.1",
+    "express-session": "^1.13.0",
     "hbs": "~3.1.0",
     "knex": "^0.11.1",
     "morgan": "~1.6.1",
-    "sqlite3": "^3.1.3",
-    "serve-favicon": "~2.3.0"
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.3"
   },
   "devDependencies": {
     "redtape": "^1.0.0",
